--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
-.excalibur-tweakpane-custom {
-    bottom : 10px;
+body { position:absolute;
+  padding:0;
+  width:100%;
+  height:100%;
+  left:0px;
+  right:0px;
+  bottom: 0px;
 }
