--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,97 @@
-body { position:absolute;
-  padding:0;
-  width:100%;
-  height:100%;
-  left:0px;
-  right:0px;
-  bottom: 0px;
+
+main {
+  position:absolute;
+  left:250px;
+  align-items: left;
+  justify-content: left;
+  height: 100%;
+  width: calc(100%-250px)
+ }
+
+ .sidebar {
+  height: 100%;
+  width: 250px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding-top: 40px;
+  background-color: #444444;
+  }
+  
+  .sidebar div {
+  padding: 8px;
+  font-size: 24px;
+  display: block;
+  }
+
+
+  #excalibur-play-root{
+    left:50%;
+
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    background-color: #333;
+  }
+  
+  li {
+    float: top;
+    border-bottom: 1px solid #bbb;
+    font-size : 14px;
+    padding: 2px;
+  }
+  
+  li:last-child {
+    border-bottom: none;
+  }
+  
+  li a {
+    display: block;
+    color: lightgray;
+    text-align: left;
+    padding: 10px 10px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+  
+  .active {
+    background-color: #4CAF50;
+  }
+  
+  label:hover:not(.active) {
+    background-color: #111;
+  }
+  
+  
+
+  /* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: gray; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: lightgray; 
+}
+
+.mapSelectorTitle{
+  text-align: center;
 }
