--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,8 @@ body { position:absolute;
 canvas {
   border: 1px solid #505020;
 }
+
+.startButton{
+  background-color: black;
+  color: black;
+}
