--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,10 @@ button#fsbPlay {
   /*border: 3px solid;
     border-color: white;
     box-shadow: 0 0 10px #ccc;*/
-  padding: 30px 80px 30px 80px;
   margin: 0;
   text-decoration: none;
   background: #333333;
-  color: #aaaaaa;
+  color: #eeeeee;
   font-family: sans-serif;
   font-size: 2rem;
   white-space: nowrap;
@@ -36,16 +35,21 @@ button#fsbPlay {
   transition: background 500ms ease-in-out, transform 500ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
-
-  -webkit-animation: excalibur-button-fadein 500ms; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: excalibur-button-fadein 500ms; /* Firefox < 16 */
-  -ms-animation: excalibur-button-fadein 500ms; /* Internet Explorer */
-  -o-animation: excalibur-button-fadein 500ms; /* Opera < 12.1 */
-  animation: excalibur-button-fadein 500ms;
+  width:100%;
+  height:100%;
+  opacity: 0.4;
+  padding-top: 20%;
 }
 
 button#fsbPlay:hover {
   background : #999999;
-  padding: 30px 80px 30px 80px;
+  transition: all 1s;
 
 }
+
+div#excalibur-play-root{ 
+  top:0px !important; 
+  width:100%;
+  aspect-ratio: 4/3;
+}
+ 
