--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,13 @@ body {
   margin:0px;
   bottom: 0px;
   background-color: #202020;
+  overflow: hidden;
 }
 
 canvas {
+  width:100%;
+  height:100%;
   padding:0px;
-  margin: auto;
+  margin: 0px;
   display: block;
 }
