--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ canvas {
 }
 
 .back {
-  background-image: url("./asset/d.svg") !important;
+  background-image: url("./asset/d2.svg") !important;
   background-size:cover !important;
   background-repeat: no-repeat !important;
   background-position: center center !important;
